; ModuleID = '/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_action.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/aio/extr_fsm.c_nn_fsm_action.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_fsm = type { i32 }

@NN_FSM_ACTION = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_fsm_action(%struct.nn_fsm* %0, i32 %1) #0 {
  %3 = alloca %struct.nn_fsm*, align 8
  %4 = alloca i32, align 4
  store %struct.nn_fsm* %0, %struct.nn_fsm** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp sgt i32 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @nn_assert(i32 %7)
  %9 = load %struct.nn_fsm*, %struct.nn_fsm** %3, align 8
  %10 = load i32, i32* @NN_FSM_ACTION, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @nn_fsm_feed(%struct.nn_fsm* %9, i32 %10, i32 %11, i32* null)
  ret void
}

declare dso_local i32 @nn_assert(i32) #1

declare dso_local i32 @nn_fsm_feed(%struct.nn_fsm*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
